--- a/Customer/Views/home.ejs
+++ b/Customer/Views/home.ejs
@@ -147,6 +147,7 @@
             
         }
 
+        /* Uncomment the below selectors and use them if needed:
         .carousel-inner {
             
         }
@@ -158,7 +159,7 @@
         #imgCarousel {
             
         }
-
+        */
 
 
 
