Lots of comments, fixed Home page somewhat.

--- a/Admin/Views/signin.ejs
+++ b/Admin/Views/signin.ejs
@@ -2,13 +2,26 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
+<!-- script - loads and executes JavaScript code. Used for adding interactivity, handling events, making API requests, etc. -->
+<!-- link - Loads and applies styles to the webpage. Used for defining fonts, colors, layouts, and overall design. -->
+
+<!-- Fetches the jQuery library from Google's CDN (content delivery network) using to import it. Can be found at Google Hosted Libraries service. -->
+<!-- The .min.css extension indicates that it’s a minified version, meaning extra spaces, comments, 
+ and unnecessary characters have been removed to make the file smaller and load faster. -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<!-- Fetches Bootstrap's minified CSS file. StackPath is the CDN that is serving and hosting Bootstrap’s CSS file. -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+<!-- Fetches Bootstrap's minified JS file. StackPath is the CDN that is serving and hosting Bootstrap’s JS file. -->
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
+<!-- Imports the Karla font from Google Fonts. Treated like a separate CSS file that your project can use. -->
 <link href="https://fonts.googleapis.com/css?family=Karla:400,700&display=swap" rel="stylesheet">
+<!-- Imports Material Design Icons' minified CSS file. It provides a vast collection of scalable icons for UI design. -->
 <link rel="stylesheet" href="https://cdn.materialdesignicons.com/4.8.95/css/materialdesignicons.min.css">
+<!-- cdnjs is a free and open-source CDN that hosts JavaScript and CSS libraries. cdnjs is powered by Cloudflare for speed and security.
+Imports "font-awesome" minified CSS from cdnjs/Cloudflare CDN. Font Awesome is a icon library. -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<!-- Imports "solid" minified CSS from cdnjs/Cloudflare CDN. Solid provides icons with a bold, filled-in appearance.  -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/solid.min.css">
 
 <title>Log In</title>
