--- a/Customer/Views/contact_us.ejs
+++ b/Customer/Views/contact_us.ejs
@@ -12,7 +12,9 @@
     <div class="contactHead">
         <h1>Contact Us</h1>
     </div>
-    <form name = "contactForm" action="/addContactUs" method = "POST"> <!--  -->
+    <!-- action="/addContactUs" -> specifies that when submitted, the form sends its data to /addContactUs 
+     method = "POST" -> ensures it's sent as a POST request. -->
+    <form name = "contactForm" action="/addContactUs" method = "POST">
         <div class="row">
         
             <div class = "row" id = "box">
