--- a/Admin/Views/signup.ejs
+++ b/Admin/Views/signup.ejs
@@ -2,13 +2,20 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
+<!-- Fetches the jQuery library from Google's CDN (content delivery network) using to import it. Can be found at Google Hosted Libraries service. -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<!-- Fetches Bootstrap's minified CSS file. StackPath is the CDN that is serving and hosting Bootstrap’s CSS file. -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+<!-- Fetches Bootstrap's minified JS file. StackPath is the CDN that is serving and hosting Bootstrap’s JS file. -->
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
+<!-- Imports the Karla font from Google Fonts. Treated like a separate CSS file that your project can use. -->
 <link href="https://fonts.googleapis.com/css?family=Karla:400,700&display=swap" rel="stylesheet">
+<!-- Imports Material Design Icons minified CSS file. It provides a vast collection of scalable icons for UI design. -->
 <link rel="stylesheet" href="https://cdn.materialdesignicons.com/4.8.95/css/materialdesignicons.min.css">
+<!-- Imports "font-awesome" minified CSS from cdnjs/Cloudflare CDN. Font Awesome is a icon library. -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<!-- Imports "solid" minified CSS from cdnjs/Cloudflare CDN. Solid provides icons with a bold, filled-in appearance. -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/solid.min.css">
 
 <title>Register</title>
