--- a/Customer/Views/Partials/header.ejs
+++ b/Customer/Views/Partials/header.ejs
@@ -8,6 +8,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel ="stylesheet" href ="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/solid.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+
 <style>
     /* header navigation bar */
     .navbar-dark .navbar-nav .nav-link:focus {
@@ -16,6 +17,7 @@
         background-color: grey;
     }
 </style>
+
 <style>
     /* footer */
     .footer {
@@ -25,6 +27,7 @@
         color: whitesmoke;
     }
 </style>
+
 <style>
     /* Displays page number in footer */
 
@@ -63,9 +66,11 @@
 }
 
 </style>
+
+
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
    
-        <a href="/" class="navbar-brand"><i class="fa fa-align-justify" title="Align Justify"></i> Update 24X7</a>
+        <a href="/" class="navbar-brand"><i class="fa fa-align-justify" title="Align Justify"></i> Main Menu</a>
      
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
