--- a/Customer/Views/home.ejs
+++ b/Customer/Views/home.ejs
@@ -6,9 +6,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" 
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <!-- Old Bootstrap with MaxCDN that is deprecated.
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <title>Home</title>
+    -->
+    
+        <title>Home</title>
     <%-include('./Partials/header.ejs')%>
 </head>
 
@@ -19,6 +24,7 @@
     </style>
 
     <style>
+        /* 3 small cards on Home page */
         .card {
             width: 211px;
             background: white;
@@ -97,14 +103,14 @@
                 <div class="card-body">
                     <div class="card-text">
                         <div class="title">
-                            <span> <%=weather.City%></span>
+                            <span> < %=weather.City%></span>
                         </div>
                         <div class="card-body text-center">
-                            <span class="topTemp card-title"><%=weather.Description%></span>
-                            <img class="card-img-responsive" src=<%=weather.Icon%>> <br>
-                            <span class="curnt">Current temp<%=weather.Temperature%>°C</span><br>
-                            <span class="max">Max temp:<%=weather.Temp_max%>°C</span> <br>
-                            <span class="min"> Min temp:<%=weather.Temp_min%>°C</span>
+                            <span class="topTemp card-title">< %=weather.Description%></span>
+                            <img class="card-img-responsive" src=< %=weather.Icon%>> <br>
+                            <span class="curnt">Current temp< %=weather.Temperature%>°C</span><br>
+                            <span class="max">Max temp:< %=weather.Temp_max%>°C</span> <br>
+                            <span class="min"> Min temp:< %=weather.Temp_min%>°C</span>
                         </div>
                         <p class="card-text" style="color:white"><small>Last updated 3 mins ago</small></p>
                     </div>
@@ -115,51 +121,66 @@
 
     </div> -->
     <style>
+        /* Inside .carousel-inner div. It is the inner image class that keeps changing. */
         .carousel-item {
             /* height: 20rm; */
-            background: black;
+            background: orange;
             color: white;
             position: relative;
             background-position: center;
             background-size: cover;
-            height: 45vh;
+            height: 45%;
             width: 100%;
             padding-top: 0%;
 
         }
 
+        /* Outer box of carousel image */
         #caroRow {
             background-color: #002cb195;
             border: 4px solid black;
-            width: 45%;
-            height: 450px;
+            width: 900px;/*45%;*/
+            min-height: 450px;
             border-radius: 30px;
             margin: auto;
             text-align: center;
-    
+            padding-bottom: 40px;
+            padding-top: 40px;
+            
             
         }
 
+        /* Immediately inside #caroRow div */
         #innerCaroImg {
             display: inline-block;
             height: 50%;
             
             
+            
         }
 
-        /* Uncomment the below selectors and use them if needed:
+        /* Uncomment the below selectors and use them if needed:*/
+        /* Inside #innerCaroImg div */
+        #rowCarosel {
+            /*width: 669px;*/
+            /*height: 400px;*/
+        }
+        
+        /* Inside #rowCarosel div. 
+        Has both .carousel-indicators class for <ol> (labels) and 
+        .carousel-inner class div (div that has the carousel-items that chang inside it) */
+        #imgCarousel {
+            
+        }
+
+        /* Inside #imgCarousel div 
+        div that has the carousel-items that change inside it */
         .carousel-inner {
             
         }
 
-        #rowCarosel {
-            
-        }
-
-        #imgCarousel {
-            
-        }
-        */
+        
+        
 
 
 
@@ -167,14 +188,16 @@
     </style>
     <div class="row" id="caroRow">
         <!-- class="container w-75 h-10 d-inline-block" style="  margin-top:40px;  padding-top:20px; padding-bottom:20px; background-color:black;" id="innerCaroImg" -->
-        <div class="container w-75 h-10 d-inline-block" style="  margin-top:40px;  padding-top:20px; padding-bottom:20px; background-color:black;" id="innerCaroImg">
+        <div class="container w-75 h-10 d-inline-block" id="innerCaroImg" style="  margin-top:40px;  padding-top:20px; padding-bottom:20px; background-color:black;">
             <div class="row" id="rowCarosel">
-                <div id="imgCarousel" class="carousel slide carousel-fade" data-ride="carousel" style="">
+                <div id="imgCarousel" class="carousel slide carousel-fade" data-ride="carousel">
+                    <!-- Div holding the icons at the bottom of carousel img -->
                     <ol class="carousel-indicators">
                         <li data-target="imgCarousel" data-slide-to="0" class="active"></li>
                         <li data-target="imgCarousel" data-slide-to="1"></li>
                         <li data-target="imgCarousel" data-slide-to="2"></li>
                     </ol>
+                    <!-- Carousel of imgs, (label included) -->
                     <div class="carousel-inner ">
                         <div class="carousel-item active" data-interval="1000">
                             <div class="container">
