--- a/Customer/Views/home.ejs
+++ b/Customer/Views/home.ejs
@@ -124,7 +124,7 @@
         /* Inside .carousel-inner div. It is the inner image class that keeps changing. */
         .carousel-item {
             /* height: 20rm; */
-            background: orange;
+            background: black;
             color: white;
             position: relative;
             background-position: center;
@@ -179,11 +179,6 @@
             
         }
 
-        
-        
-
-
-
 
     </style>
     <div class="row" id="caroRow">
@@ -198,34 +193,42 @@
                         <li data-target="imgCarousel" data-slide-to="2"></li>
                     </ol>
                     <!-- Carousel of imgs, (label included) -->
-                     <!-- *Note: news[0], news[1], etc will FAIL if Admin has not provided 3 news entries so the below can pull from the database -->
+                     <!-- *Note: If news[0], news[1], FAIL if Admin has not provided 3 news entries so the below can pull from the database 
+                                Making use for NewsAPI.org apis for business, tech, and Wall Street Journal if Admin did not preovide 3 entries for home page-->
                     <div class="carousel-inner ">
                         <div class="carousel-item active" data-interval="1000">
                             <div class="container">
-                                <!-- < % if (news[0].News_urlToImage) { %>
-                                            <img class='img-fluid mw-100 mh-100' src="< %= news[0].News_urlToImage %>">
-                                    < % } else { %>
-                                            <img class='img-fluid mw-100 mh-100' src="/images/fallback-image.jpg">
-                                    < % } %> -->
-                                <img class='img-fluid mw-100 mh-100' src=<%=news[0].News_urlToImage%>>
+                                <%if(news.length >= 3){%>
+                                    <img class='img-fluid mw-100 mh-100' src=<%=news[0].News_urlToImage%>>
+                                <%} else {%>
+                                    <img class='img-fluid mw-100 mh-100' src=<%=businessNews[0].urlToImage%>>
+                                <%}%> 
                                 <div class="carousel-caption d-none d-md-block">
-                                    <h5>Financial news</h5>
+                                    <h5>Business news</h5>
                                 </div>
                             </div>
                         </div>
                         <div class="carousel-item" data-interval="500">
                             <div class="container">
-                                <img class='img-fluid mw-100 mh-100' src=<%=news[1].News_urlToImage%>>
+                                <%if(news.length >= 3){%>
+                                    <img class='img-fluid mw-100 mh-100' src=<%=news[1].News_urlToImage%>>
+                                <%}else{%>
+                                    <img class='img-fluid mw-100 mh-100' src=<%=techNews[2].urlToImage%>>
+                                <%}%>
                                 <div class="carousel-caption d-none d-md-block">
-                                    <h5>Sport news</h5>
+                                    <h5>Tech news</h5>
                                 </div>
                             </div>
                         </div>
                         <div class="carousel-item " data-interval="200">
                             <div class="container">
-                                <img class='img-fluid mw-100 mh-100' src=<%=news[2].News_urlToImage%>>
+                                <%if(news.length >= 3){%>
+                                    <img class='img-fluid mw-100 mh-100' src=<%=news[2].News_urlToImage%>>
+                                <%}else{%>
+                                    <img class='img-fluid mw-100 mh-100' src=<%=wsjNews[2].urlToImage%>>
+                                <%}%>
                                 <div class="carousel-caption d-none d-md-block">
-                                    <h5>Cultural news</h5>
+                                    <h5>Wall Street Journal</h5>
                                 </div>
                             </div>
                             <a class="carousel-control-prev" href="#imgCarousel" role="button" data-slide="prev">
@@ -245,19 +248,58 @@
     <div class="container" style=" padding-top: 3%; padding-bottom: 8%; width:100%; ">
         <div class="row"
             style="display: flex; justify-content: center; flex-direction: row; padding-bottom: 8%;">
-            <% for(var i=0; i < news.length; i++) { %>
-            <div style="background-color: #002cb195; width:300px; border: 4px solid black; border-radius: 30px; margin-left: 2%; margin-bottom: 2%; padding-top:2%; padding-bottom:2%;">   
-                <div class="card col-md-10" style="margin-left:auto; margin-right:auto; height:100%; ">
-                    <div class="row">
-                        <img class="card-img" style="max-width: 100%; min-width:100%; height:auto;" src=<%=news[i].News_urlToImage%>>
+            <!-- If News collection in MongoDB > 3, use the News collection -->
+            <%if(news.length >= 3){%>
+                <% for(var i=0; i < news.length; i++) {%>
+                    <div style="background-color: #002cb195; width:300px; border: 4px solid black; border-radius: 30px; margin-left: 2%; margin-bottom: 2%; padding-top:2%; padding-bottom:2%;">   
+                        <div class="card col-md-10" style="margin-left:auto; margin-right:auto; height:100%; ">
+                            <div class="row">
+                                <img class="card-img" style="max-width: 100%; min-width:100%; height:auto;" src=<%=news[i].News_urlToImage%>>
+                            </div>
+                            <div class="card-body">
+                                <p class="card-text"> <small>
+                                        <%=news[i].News_title%>
+                                    </small></p>
+                            </div>
+                        </div>
                     </div>
-                    <div class="card-body">
-                        <p class="card-text"> <small>
-                                <%=news[i].News_title%>
-                            </small></p>
+                    <%}%>
+            <!-- Otherwise, use NewAPI.or apis for business, tech, and wall street journal -->
+            <%}else{%>
+                <% for(var i=0; i < 3; i++) {%>
+                <div style="background-color: #002cb195; width:300px; border: 4px solid black; border-radius: 30px; margin-left: 2%; margin-bottom: 2%; padding-top:2%; padding-bottom:2%;">   
+                    <div class="card col-md-10" style="margin-left:auto; margin-right:auto; height:100%; ">
+                        <%if(i == 0){%>
+                            <div class="row">
+                                <img class="card-img" style="max-width: 100%; min-width:100%; height:auto;" src=<%=businessNews[0].urlToImage%>>
+                            </div>
+                            <div class="card-body">
+                                <p class="card-text"> <small>
+                                        <%=businessNews[0].title%>
+                                    </small></p>
+                            </div>
+                        <%}else if(i == 1){%>
+                            <div class="row">
+                                <img class="card-img" style="max-width: 100%; min-width:100%; height:auto;" src=<%=techNews[2].urlToImage%>>
+                            </div>
+                            <div class="card-body">
+                                <p class="card-text"> <small>
+                                        <%=techNews[1].title%>
+                                    </small></p>
+                            </div>
+                        <%}else{%>
+                            <div class="row">
+                                <img class="card-img" style="max-width: 100%; min-width:100%; height:auto;" src=<%=wsjNews[2].urlToImage%>>
+                            </div>
+                            <div class="card-body">
+                                <p class="card-text"> <small>
+                                        <%=wsjNews[2].title%>
+                                    </small></p>
+                            </div>
+                        <%}%>
                     </div>
                 </div>
-            </div>
+                <%}%>
             <%}%>
         </div>
     </div>
